@@ -7,6 +7,7 @@ S3method(plot,cv.MLGL)
 S3method(plot,stability.MLGL)
 S3method(predict,MLGL)
 S3method(predict,cv.MLGL)
+export(Chisqtest)
 export(Ftest)
 export(MLGL)
 export(cv.MLGL)
@@ -15,6 +16,7 @@ export(hierarchicalFDR)
 export(hierarchicalFWER)
 export(listToMatrix)
 export(overlapgglasso)
+export(partialChisqtest)
 export(partialFtest)
 export(selFDR)
 export(selFWER)
@@ -31,7 +33,9 @@ importFrom(graphics,legend)
 importFrom(graphics,matplot)
 importFrom(stats,anova)
 importFrom(stats,approx)
+importFrom(stats,binomial)
 importFrom(stats,dist)
+importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,p.adjust)
 importFrom(stats,predict)
