@@ -1,4 +1,2 @@
 - details dans description HCgglasso + page package
-- logistic
-- size sample
 - bug fullProcess, groupe indicé à -1 ne ressort pas les variables
