@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/testFunction.R
-\name{partialFtest}
-\alias{partialFtest}
-\title{Partial F-test}
+\name{Chisqtest}
+\alias{Chisqtest}
+\title{Chi-square test}
 \usage{
-partialFtest(X, y, varToTest)
+Chisqtest(X, y, varToTest)
 }
 \arguments{
 \item{X}{design matrix of size n*p}
@@ -17,19 +17,19 @@ partialFtest(X, y, varToTest)
 a vector of the same length as varToTest containing the p-values of the test.
 }
 \description{
-Perform a partial F-test
+Perform a Chi-square test
 }
 \details{
-y = X * beta + epsilon
+logit model : ln(P(y=1|X)/(1-P(y=1|X))) = X * beta + epsilon
 
 null hypothesis : beta[varToTest] = 0
 alternative hypothesis : it exists an index k in varToTest such that beta[k] != 0
 
 The test statistic is based on a full and a reduced model.
-full : y = X * beta + epsilon
-reduced : y = X * beta[-varToTest] + epsilon
+full : ln(P(y=1|X)/(1-P(y=1|X))) = X * beta[varToTest]  + epsilon
+reduced : the null model
 }
 \seealso{
-\link{Ftest}
+\link{partialChisqtest}
 }
 
